Overflow fixed but Full Screen looks wierd

--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -1,18 +1,18 @@
 .outer
 {
     background-image: url("./assets/BG.png");
-    background-repeat: no-repeat;
-    background-size: 95% 90%;
+    background-repeat: repeat-y;
+    background-size: 96%;
     background-position: center;
 
     opacity: 0.95;
 
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
-    height: 94vh;
-    width: 96vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    height: 98%;
+    width: 98%;
     
     font-family: 'Source Sans Pro', sans-serif;
 }
